# personal-project

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml  cicd.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  db.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml
backend/routers/auth/: models.py  routes.py  utils.py
backend/routers/posts/: models.py  routes.py
backend/routers/user/: models.py
frontend/: Dockerfile  biome.json  docker-compose.yml  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/contexts/: authContext.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/routes/: ProtectedRoute.tsx
frontend/src/components/: LoadingSpinner.tsx
frontend/src/components/ui/: FormInput.tsx
frontend/src/forms/: LoginForm.tsx  RegisterForm.tsx
frontend/src/utils/: handleLogin.ts  handleRegister.ts  loginFormSchema.ts  registerFormSchema.ts
