[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Fennom Schalkwijk <schalkwijkfennom@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
enable-unstable-feature = ["string_processing"]
preview = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 79
ignore = "E203, E501, W503"
