[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Fennom Schalkwijk <schalkwijkfennom@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "D", "I"]
